# yomi-dict

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: CI.yml
src/: db.rs  db_indexed_db.rs  deinflect.rs  dict.rs  dict_item.rs  error.rs  kanji_bank.rs  lib.rs  tag_bank.rs  terms_bank.rs  translator.rs
tests/: test_db.rs  test_deinflect.rs  test_lib.rs  test_translator.rs  web.rs
tests/dict/: index.json  kanji_bank_1.json  tag_bank_1.json  term_bank_1.json  term_bank_2.json
