[package]
name = "yomi-dict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
enumflags2 = { version = "0.7.5", features = ["serde"] }
wana_kana = "3"
itertools = "0.10.5"
rexie = "0.4"
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
futures = "0.3"
async-trait = "0.1.62"

[dev-dependencies]
wasm-bindgen-test = "0.3"
